fix text alignments

--- a/src/Components/Button/Button.module.css
+++ b/src/Components/Button/Button.module.css
@@ -6,6 +6,7 @@ button.defaultButton {
 
   color: white;
 
+  border: none;
   border-radius: 5vh 0vh;
   background: linear-gradient(90deg, #2500ff 0%, #730056 100%);
 
