--- a/src/Components/TechItem/TechItem.module.css
+++ b/src/Components/TechItem/TechItem.module.css
@@ -36,6 +36,7 @@ div.techItem h2 {
 
 div.techItem p {
   font-size: 2.5vh;
+  text-align: center;
 }
 
 div.techItem button {
